--- a/AngularJS/AdvancedForm/index.html
+++ b/AngularJS/AdvancedForm/index.html
@@ -8,7 +8,7 @@
     * {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     }
-    
+
     label {
       font-weight: bold;
     }
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div ng-app="">
-    <form name="form" method="post">
+    <form name="form" method="post" ng-model="form">
       <table>
         <tr>
           <td><label for="username">Username:</label></td>
@@ -49,22 +49,22 @@
         </tr>
         <tr>
           <td><label for="age">Age:</label></td>
-          <td><input type="number" name="age" placeholder="23" ng-model="age" /></td>
+          <td><input type="number" name="age" placeholder="23" ng-model="age" required /></td>
           <td>{{form.age.$valid}}</td>
         </tr>
         <tr>
           <td><label for="address">Address:</label></td>
-          <td><input type="text" name="address" placeholder="Addressway 10" ng-model="address" /></td>
+          <td><input type="text" name="address" placeholder="Addressway 10" ng-model="address" required /></td>
           <td>{{form.address.$valid}}</td>
         </tr>
         <tr>
           <td><label for="zipcode">Zip code:</label></td>
-          <td><input type="number" name="zipcode" placeholder="12345" ng-model="zipcode" /></td>
+          <td><input type="number" name="zipcode" placeholder="12345" ng-model="zipcode" required /></td>
           <td>{{form.zipcode.$valid}}</td>
         </tr>
         <tr>
           <td><label for="website">Website:</label></td>
-          <td><input type="url" name="website" placeholder="http://www.exampleweb.ex" ng-model="website" /></td>
+          <td><input type="url" name="website" placeholder="http://www.exampleweb.ex" ng-model="website" required /></td>
           <td>{{form.website.$valid}}</td>
         </tr>
         <tr>
@@ -73,6 +73,7 @@
           <td>{{form.password.$valid}}</td>
         </tr>
       </table>
+      <input type="submit" name="submit" value="Registrera" ng-disabled="form.$invalid" />
     </form>
   </div>
 </body>
