--- a/AngularJS/SimpleForm/index.html
+++ b/AngularJS/SimpleForm/index.html
@@ -7,12 +7,16 @@
 </head>
 <body>
   <div ng-app="">
-    <form name="form" method="post">
-      <input type="email" name="email" ng-model="email" />
+    <form name="form" method="post" ng-model="form">
+      <table>
+        <tr>
+          <td><label for="email">E-mail:</label></td>
+          <td><input type="email" name="email" ng-model="email" placeholder="E-mail" required /></td>
+          <td>{{form.email.$valid}}</td>
+        </tr>
+      </table>
+      <input type="submit" name="submit" value="Registrera" ng-disabled="form.$invalid" />
     </form>
-    <div>
-      <b>E-mail:</b> {{form.email.$valid}}
-    </div>
   </div>
 </body>
 </html>
