--- a/AngularJS/SimpleForm/index.html
+++ b/AngularJS/SimpleForm/index.html
@@ -4,6 +4,19 @@
   <meta charset="utf-8">
   <title>Scenario</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <style>
+    * {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    }
+
+    label {
+      font-weight: bold;
+    }
+
+    input {
+      width: 160px;
+    }
+  </style>
 </head>
 <body>
   <div ng-app="">
