--- a/AngularJS/SimpleForm/email_index.html
+++ b/AngularJS/SimpleForm/email_index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div ng-app="">
-    <form name="form" action="email_index.php" method="post" ng-model="form">
+    <form name="form" action="email_index.html" method="post" ng-model="form">
       <table>
         <tr>
           <td><input id="email-input" type="text" name="email" ng-model="email" placeholder="example@test.com" required /></td>
