--- a/AngularJS/AdvancedForm/temp_index.html
+++ b/AngularJS/AdvancedForm/temp_index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <div ng-app="">
+  <div ng-app="app" ng-controller="controller">
     <form name="form" ng-model="form">
       <table>
         <tr>
