Split "helper files" to generate amount of inputs and input type

--- a/misc/generateRandSeq.html
+++ b/misc/generateRandSeq.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
-    <script type="text/javascript" src="generateRandSeq.js"></script>
+    <!--  Comment/uncomment these scripts to generate a random sequence of
+          numbers to determine the amount of inputs and their type -->
+    <!--<script type="text/javascript" src="generateRandAmountSeq.js"></script>-->
+    <script type="text/javascript" src="generateRandTypeSeq.js"></script>
   </body>
 </html>
