--- a/AngularJS/AdvancedForm/searchInput.html
+++ b/AngularJS/AdvancedForm/searchInput.html
@@ -3,4 +3,5 @@
   type="{{$ctrl.type}}"
   name="{{$ctrl.name}}"
   placeholder="{{$ctrl.placeholder}}"
-  ng-model="$ctrl.ngModel" />
+  ng-model="$ctrl.ngModel"
+  style="width:168px;" />
