--- a/AngularJS/AdvancedForm/index.html
+++ b/AngularJS/AdvancedForm/index.html
@@ -5,6 +5,9 @@
   <title>Scenario</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="random-numbers-10000-1-10.js"></script>
+  <script type="text/javascript" src="random-numbers-10000-1-20.js"></script>
+  <script type="text/javascript" src="inputTypes.js"></script>
   <style>
     * {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
