--- a/AngularJS/AdvancedForm/input/emailInput.html
+++ b/AngularJS/AdvancedForm/input/emailInput.html
@@ -3,5 +3,6 @@
   type="{{$ctrl.type}}"
   name="{{$ctrl.name}}"
   placeholder="{{$ctrl.placeholder}}"
-  ng-model="$ctrl.ngModel"
-  date-number-format="true" />
+  ng-model="email"
+  ng-required="true"
+  ng-value="" />
