--- a/AngularJS/AdvancedForm/input/numberInput.html
+++ b/AngularJS/AdvancedForm/input/numberInput.html
@@ -3,4 +3,7 @@
   type="{{$ctrl.type}}"
   name="{{$ctrl.name}}"
   placeholder="{{$ctrl.placeholder}}"
-  ng-model="$ctrl.ngModel" />
+  date-number-format="true"
+  ng-model="number"
+  ng-required="true"
+  ng-value="" />
