--- a/AngularJS/AdvancedForm/input/telInput.html
+++ b/AngularJS/AdvancedForm/input/telInput.html
@@ -3,5 +3,6 @@
   type="{{$ctrl.type}}"
   name="{{$ctrl.name}}"
   placeholder="{{$ctrl.placeholder}}"
-  ng-model="$ctrl.ngModel"
-  style="width:168px;" />
+  ng-model="tel"
+  ng-required="true"
+  ng-value="" />
