Add labels to inputs

--- a/AngularJS/AdvancedForm/form.html
+++ b/AngularJS/AdvancedForm/form.html
@@ -7,7 +7,7 @@
   <table>
     <tr ng-repeat="input in dynamicForm track by $index">
       <td>
-        <label for="input.name">{{input.name}}</label>
+        <label for="input.name">{{input.label}}:</label>
       </td>
       <td>
         <text-input
