Check if form is valid based on input's validity

--- a/AngularJS/AdvancedForm/form.html
+++ b/AngularJS/AdvancedForm/form.html
@@ -12,71 +12,81 @@
       <td>
         <text-input
           ng-if="input.name == 'text'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </text-input>
         <email-input
           ng-if="input.name == 'email'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </email-input>
         <tel-input
           ng-if="input.name == 'tel'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </tel-input>
         <url-input
           ng-if="input.name == 'url'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </url-input>
         <number-input
           ng-if="input.name == 'number'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </number-input>
         <password-input
           ng-if="input.name == 'password'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </password-input>
         <date-input
           ng-if="input.name == 'date'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </date-input>
         <month-input
           ng-if="input.name == 'month'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </month-input>
         <week-input
           ng-if="input.name == 'week'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </week-input>
         <search-input
           ng-if="input.name == 'search'"
+          class="input.name"
           type="input.type"
-          name="input.name"
+          name="input.name + $index"
           placeholder="input.placeholder"
           ng-model="input.name">
         </search-input>
