--- a/AngularJS/AdvancedForm/input/textInput.html
+++ b/AngularJS/AdvancedForm/input/textInput.html
@@ -1,8 +1,7 @@
 <input
-  id="{{$ctrl.name}}"
+  class="{{$ctrl.name}}"
   type="{{$ctrl.type}}"
   name="{{$ctrl.name}}"
   placeholder="{{$ctrl.placeholder}}"
   ng-model="text"
-  ng-required="true"
-  ng-value="" />
+  ng-required="true" />
