--- a/AngularJS/AdvancedForm/input/passwordInput.html
+++ b/AngularJS/AdvancedForm/input/passwordInput.html
@@ -1,5 +1,5 @@
 <input
-  id="{{$ctrl.name}}"
+  class="{{$ctrl.class}}"
   type="{{$ctrl.type}}"
   name="{{$ctrl.name}}"
   placeholder="{{$ctrl.placeholder}}"
