--- a/AngularJS/AdvancedForm/input/textInput.html
+++ b/AngularJS/AdvancedForm/input/textInput.html
@@ -1,5 +1,5 @@
 <input
-  class="{{$ctrl.name}}"
+  class="{{$ctrl.class}}"
   type="{{$ctrl.type}}"
   name="{{$ctrl.name}}"
   placeholder="{{$ctrl.placeholder}}"
