--- a/AngularJS/DynamicForm/index.html
+++ b/AngularJS/DynamicForm/index.html
@@ -5,9 +5,13 @@
   <title>Scenario</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="random-values.js"></script>
+  <script type="text/javascript" src="random-values-simple.js"></script>
   <script type="text/javascript" src="randexp.min.js"></script>
   <script type="text/javascript" src="random-numbers-10000-1-10.js"></script>
   <script type="text/javascript" src="random-numbers-10000-1-40.js"></script>
+  <script type="text/javascript" src="random-numbers-25000-1-10.js"></script>
+  <script type="text/javascript" src="random-numbers-25000-1-40.js"></script>
   <script type="text/javascript" src="inputTypes.js"></script>
   <style>
     * {
